<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2016 Tyler Wong

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <!-- NAMES -->
    <string name="app_name">Pokébase</string>
    <string name="enter_name">Enter your name</string>
    <string name="pokebase">Pokébase</string>
    <string name="teams">My Teams</string>
    <string name="new_team">New Team</string>

    <!-- URLS -->
    <string name="sprite_url">https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/%1$s.png</string>
    <string name="icon_url">https://raw.githubusercontent.com/msikma/pokesprite/master/icons/pokemon/regular/%1$s.png</string>

    <!-- TITLES -->
    <string name="name_title">First, what is\nyour name?</string>
    <string name="gender_title">Are you a Boy?\nOr are you a Girl?</string>
    <string name="setup_title">Setting up\nyour Pokébase&#8230;</string>
    <string name="go_back">Go Back</string>
    <string name="submit">Submit</string>
    <string name="add_pokemon">Add Pokémon</string>
    <string name="login_title">What was your\nname again?</string>
    <string name="add_team_title">Choose a team to add %1$s to!</string>
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="delete_team">Delete Team</string>
    <string name="delete_pokemon">Delete Pokémon</string>
    <string name="close_title">Exit the Application</string>
    <string name="close_prompt">Are you sure you want to exit?</string>
    <string name="no_teams_title">No Teams</string>
    <string name="basic_info">Basic Info</string>
    <string name="base_stats">Base Stats</string>
    <string name="view_profile">View Profile</string>
    <string name="no_results">No Results</string>
    <string name="change_trainer_name">Change Trainer Name</string>
    <string name="check_updates">Check for updates</string>
    <string name="trainer_name">Trainer Name</string>
    <string name="updates">Updates</string>
    <string name="version">Version</string>

    <!-- VALUES -->
    <string name="close_drawer">Navigation View</string>
    <string name="open_drawer">Navigation View Closed</string>
    <string name="shared_transition">shared transition</string>
    <string name="speech_prompt">Search for a Pokémon</string>
    <string name="update_url">https://github.com/tylerbwong/Pokebase-SQLite/releases/latest</string>
    <string name="trainer_name_key">name</string>
    <string name="update_key">update</string>
    <string name="version_key">version</string>

    <!-- BUTTONS -->
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- LABELS -->
    <string name="count">0/15</string>
    <string name="team_description">Create your own teams to keep track of your favorite
        Pokémon!</string>
    <string name="pokedex_description">View your Pokébase and look up information on all 721
        Pokémon.</string>
    <string name="move_description">View quick information about all moves and items.</string>
    <string name="make_team">Make your first team!</string>
    <string name="back_prompt">Are you sure you want to go back? All changes will be lost.</string>
    <string name="type">Type</string>
    <string name="species">Species</string>
    <string name="region">Region</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="baseExp">Base EXP</string>
    <string name="normal">Normal</string>
    <string name="evolutions">Evolutions</string>
    <string name="moveset">Move Set</string>
    <string name="nickname">Nickname</string>
    <string name="nickname_hint">Enter your Pokémon\'s nickname</string>
    <string name="team_name">Team Name</string>
    <string name="description">Description</string>
    <string name="no_pokemon">No Pokémon Added Yet!</string>
    <string name="lvl">Lvl.</string>
    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="create_user">Create User</string>
    <string name="go">Go!</string>
    <string name="taken">Username Already Taken!</string>
    <string name="new_name">Please enter a new username.</string>
    <string name="ok">OK</string>
    <string name="not_found">Username Not Found!</string>
    <string name="try_again">Please try again.</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="no_teams">"No teams to add %1$s to. Please add a team first."</string>
    <string name="hashtag">#</string>
    <string name="delete_team_prompt">Are you sure you want to delete %1$s?</string>
    <string name="clear_all_teams">Clear All Teams</string>
    <string name="clear_all_teams_prompt">Are you sure you want to clear all teams?</string>
    <string name="cleared_teams">Cleared All Teams</string>
    <string name="by_number">Sort By Number</string>
    <string name="by_name">Sort By Name</string>
    <string name="used_name">Invalid Team Name</string>
    <string name="used_name_info">%1$s has already been taken!\nPlease choose a different name.</string>
    <string name="audio">Audio</string>
    <string name="sound_played">Played sound!</string>
    <string name="settings">Settings</string>
    <string name="trainer">Trainer %1$s</string>
    <string name="items">Items</string>
    <string name="moves">Moves</string>
    <string name="pokemon_name">#%1$s %2$s</string>
    <string name="no_evolutions">No Evolutions</string>
    <string name="hashtag_format">#%1$s</string>
    <string name="damage_class">Damage Class</string>
    <string name="power">Power</string>
    <string name="pp">PP</string>
    <string name="accuracy">Accuracy</string>
    <string name="cost">Cost</string>
    <string name="add_success">Added %1$s to %2$s!</string>
    <string name="team_add">Added new team %1$s!</string>
    <string name="team_update">Updated %1$s!</string>
    <string name="team_deleted">Deleted %1$s</string>
    <string name="no_evolutions_message">%1$s does not evolve.</string>
    <string name="show_profile">Show Profile</string>
    <string name="profile_prompt">Are you sure you want to view %1$s\'s profile? Your changes will be saved.</string>
    <string name="search_hint">Search</string>
    <string name="checking">Checking for updates...</string>
</resources>
