<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="40dp">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar"/>

    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:id="@+id/detail_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:orientation="vertical"
        android:paddingTop="90dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/level_label">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nickname_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nickname"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="11"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/level_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp"
                android:layout_toLeftOf="@+id/level_spinner"
                android:text="Lvl"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/level_spinner"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/moveset"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/move_one_spinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/move_two_spinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/move_three_spinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/move_four_spinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_above="@id/detail_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-80dp"
        android:background="@drawable/circle_shape"
        android:scaleType="center"
        android:transitionName="@string/shared_transition"/>
</RelativeLayout>